checkstyle: AccessConditionUtils; refs #25693