@@ -384,10 +384,10 @@ public final class AccessConditionUtils {
             }
 
             ret = checkAccessPermissionBySolrDoc(results.get(0), query, privilegeName, request);
-            
+
             // Add permission check outcome to user session
             addSessionPermission(attributeName, ret, request);
-            
+
             return ret;
         } catch (PresentationException e) {
             logger.debug(StringConstants.LOG_PRESENTATION_EXCEPTION_THROWN_HERE, e.getMessage());
@@ -569,10 +569,10 @@ public final class AccessConditionUtils {
                 logger.debug(StringConstants.LOG_PRESENTATION_EXCEPTION_THROWN_HERE, e.getMessage());
             }
         }
-        
+
         // Add permission check outcome to user session
         addSessionPermission(attributeName, ret, request);
-        
+
         //return only the access status for the relevant files
         return ret;
     }
@@ -772,8 +772,8 @@ public final class AccessConditionUtils {
 
         if (permissions.containsKey(key) && permissions.get(key) != null) {
             return permissions.get(key);
-            //            logger.trace("Access ({}) previously checked and is {} for '{}/{}' (Session ID {})", privilegeType, ret.isGranted(), pi, contentFileName,
-            //                    request.getSession().getId()); //NOSONAR Debugging
+            // logger.trace("Access ({}) previously checked and is {} for '{}/{}' (Session ID {})", privilegeType,
+            // ret.isGranted(), pi, contentFileName, request.getSession().getId()); //NOSONAR Debugging
         }
         // TODO check for all images and save to map
         Map<String, AccessPermission> accessMap = checkAccessPermissionByIdentifierAndFileName(pi, contentFileName, privilegeType, request);
@@ -782,10 +782,10 @@ public final class AccessConditionUtils {
             AccessPermission pageAccess = entry.getValue();
             permissions.put(newKey, pageAccess);
         }
-        
+
         // Add permission check outcome to user session
         addSessionPermission(attributeName, permissions, request);
-        
+
         return permissions.get(key) != null ? permissions.get(key) : AccessPermission.denied();
         // logger.debug("Access ({}) not yet checked for '{}/{}', access is {}", privilegeType, pi, contentFileName, ret.isGranted()); //NOSONAR Deb
     }
@@ -1186,7 +1186,7 @@ public final class AccessConditionUtils {
         List<License> licenses = dao.getLicenses(type);
         List<UserGroup> userGroups = user.map(User::getAllUserGroups).orElse(Collections.emptyList());
         List<IpRange> ipRangesApplyingToGivenIp =
-                dao.getAllIpRanges().stream().filter(range -> range.matchIp(ipAddress)).collect(Collectors.toList());
+                dao.getAllIpRanges().stream().filter(range -> range.matchIp(ipAddress)).toList();
 
         List<License> applyingLicenses = licenses.stream()
                 .filter(license -> {
@@ -1194,7 +1194,7 @@ public final class AccessConditionUtils {
                             || userGroups.contains(license.getUserGroup())
                             || ipRangesApplyingToGivenIp.stream().anyMatch(r -> r.getSubnetMask().equals(license.getIpRange().getSubnetMask()));
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         return applyingLicenses.stream()
                 .filter(l -> {
@@ -1202,7 +1202,7 @@ public final class AccessConditionUtils {
                             .filter(ol -> !ol.equals(l))
                             .noneMatch(ol -> l.getLicenseType().getOverriddenLicenseTypes().contains(ol.getLicenseType()));
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -1236,7 +1236,7 @@ public final class AccessConditionUtils {
      * 
      * @param attributeName
      * @param request
-     * @return
+     * @return Object found in session; null otherwise
      */
     public static Object getSessionPermission(String attributeName, HttpServletRequest request) {
         if (request == null || request.getSession() == null) {
@@ -1251,7 +1251,7 @@ public final class AccessConditionUtils {
      * @param attributeName
      * @param attributeValue
      * @param request
-     * @return
+     * @return true if successful; false otherwise
      */
     public static boolean addSessionPermission(String attributeName, Object attributeValue, HttpServletRequest request) {
         // logger.trace("addSessionPermission: {}", attributeName); //NOSONAR Debugging
